Module implementation and Material enhancements