@@ -2,11 +2,10 @@ package cz.projektant_pata.tda26.controller;
 
 import cz.projektant_pata.tda26.dto.course.quiz.QuizRequestDTO;
 import cz.projektant_pata.tda26.dto.course.quiz.QuizResponseDTO;
-import cz.projektant_pata.tda26.dto.course.quiz.question.*;
-import cz.projektant_pata.tda26.model.course.quiz.MultipleChoiceQuestion;
-import cz.projektant_pata.tda26.model.course.quiz.Question;
+import cz.projektant_pata.tda26.dto.course.quiz.question.SubmitQuizDTO;
+import cz.projektant_pata.tda26.dto.course.quiz.question.SubmitQuizResultDTO;
+import cz.projektant_pata.tda26.mapper.QuizMapper;
 import cz.projektant_pata.tda26.model.course.quiz.Quiz;
-import cz.projektant_pata.tda26.model.course.quiz.SingleChoiceQuestion;
 import cz.projektant_pata.tda26.service.IQuizService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
@@ -16,106 +15,77 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("/api/courses/{courseUuid}/quizzes")
+@RequestMapping("/api/courses/{courseUuid}/modules/{moduleUuid}/quizzes") // ✅ opravena URL
 @RequiredArgsConstructor
 public class QuizController {
 
     private final IQuizService quizService;
+    private final QuizMapper quizMapper; // ✅ mapper injektován místo privátních metod
 
     @GetMapping
-    public ResponseEntity<List<QuizResponseDTO>> getAllQuizzes(@PathVariable UUID courseUuid) {
-        List<Quiz> quizzes = quizService.find(courseUuid);
-        List<QuizResponseDTO> response = quizzes.stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+    public ResponseEntity<List<QuizResponseDTO>> find(
+            @PathVariable UUID courseUuid,
+            @PathVariable UUID moduleUuid  // ✅ přidáno
+    ) {
+        List<QuizResponseDTO> response = quizService.find(moduleUuid).stream() // ✅ bylo: courseUuid
+                .map(quizMapper::toResponse)
+                .toList();
         return ResponseEntity.ok(response);
     }
 
-    @PostMapping
-    public ResponseEntity<QuizResponseDTO> createQuiz(
+    @GetMapping("/{quizUuid}")
+    public ResponseEntity<QuizResponseDTO> find(
             @PathVariable UUID courseUuid,
-            @RequestBody @Valid QuizRequestDTO request) {
-        Quiz createdQuiz = quizService.create(courseUuid, request);
-        return ResponseEntity.status(HttpStatus.CREATED)
-                .body(mapToResponse(createdQuiz));
+            @PathVariable UUID moduleUuid,  // ✅ přidáno
+            @PathVariable UUID quizUuid
+    ) {
+        Quiz quiz = quizService.find(moduleUuid, quizUuid); // ✅ bylo: courseUuid
+        return ResponseEntity.ok(quizMapper.toResponse(quiz));
     }
 
-    @GetMapping("/{quizUuid}")
-    public ResponseEntity<QuizResponseDTO> getQuiz(
+    @PostMapping
+    public ResponseEntity<QuizResponseDTO> create(
             @PathVariable UUID courseUuid,
-            @PathVariable UUID quizUuid) {
-        Quiz quiz = quizService.find(courseUuid, quizUuid);
-        return ResponseEntity.ok(mapToResponse(quiz));
+            @PathVariable UUID moduleUuid,  // ✅ přidáno
+            @RequestBody @Valid QuizRequestDTO request
+    ) {
+        Quiz created = quizService.create(moduleUuid, request); // ✅ bylo: courseUuid
+        return ResponseEntity
+                .status(HttpStatus.CREATED)
+                .body(quizMapper.toResponse(created));
     }
 
     @PutMapping("/{quizUuid}")
-    public ResponseEntity<QuizResponseDTO> updateQuiz(
+    public ResponseEntity<QuizResponseDTO> update(
             @PathVariable UUID courseUuid,
+            @PathVariable UUID moduleUuid,  // ✅ přidáno
             @PathVariable UUID quizUuid,
-            @RequestBody @Valid QuizRequestDTO request) {
-        Quiz updatedQuiz = quizService.update(courseUuid, quizUuid, request);
-        return ResponseEntity.ok(mapToResponse(updatedQuiz));
+            @RequestBody @Valid QuizRequestDTO request
+    ) {
+        Quiz updated = quizService.update(moduleUuid, quizUuid, request); // ✅ bylo: courseUuid
+        return ResponseEntity.ok(quizMapper.toResponse(updated));
     }
 
     @DeleteMapping("/{quizUuid}")
-    @ResponseStatus(HttpStatus.NO_CONTENT)
-    public void deleteQuiz(
+    public ResponseEntity<Void> kill(
             @PathVariable UUID courseUuid,
-            @PathVariable UUID quizUuid) {
-        quizService.kill(courseUuid, quizUuid);
+            @PathVariable UUID moduleUuid,  // ✅ přidáno
+            @PathVariable UUID quizUuid
+    ) {
+        quizService.kill(moduleUuid, quizUuid); // ✅ bylo: courseUuid
+        return ResponseEntity.noContent().build();
     }
 
     @PostMapping("/{quizUuid}/submit")
-    public ResponseEntity<SubmitQuizResultDTO> submitQuiz(
+    public ResponseEntity<SubmitQuizResultDTO> submit(
             @PathVariable UUID courseUuid,
+            @PathVariable UUID moduleUuid,  // ✅ přidáno
             @PathVariable UUID quizUuid,
-            @RequestBody @Valid SubmitQuizDTO submission) {
-
-        SubmitQuizResultDTO result = quizService.submitQuiz(courseUuid, quizUuid, submission);
+            @RequestBody @Valid SubmitQuizDTO submission
+    ) {
+        SubmitQuizResultDTO result = quizService.submitQuiz(moduleUuid, quizUuid, submission); // ✅ bylo: courseUuid
         return ResponseEntity.ok(result);
-    }
-
-
-
-    private QuizResponseDTO mapToResponse(Quiz quiz) {
-        QuizResponseDTO dto = new QuizResponseDTO();
-        dto.setUuid(quiz.getUuid());
-        dto.setTitle(quiz.getTitle());
-        dto.setAttemptsCount(quiz.getAttemptsCount());
-
-        List<QuestionResponseDTO> questions = quiz.getQuestions().stream()
-                .map(this::mapQuestionToResponse)
-                .collect(Collectors.toList());
-        dto.setQuestions(questions);
-
-        return dto;
-    }
-
-    private QuestionResponseDTO mapQuestionToResponse(Question q) {
-        if (q instanceof SingleChoiceQuestion sq) {
-            SingleChoiceQuestionResponseDTO dto = new SingleChoiceQuestionResponseDTO();
-            fillCommonFields(dto, sq);
-            dto.setCorrectIndex(sq.getCorrectIndex());
-            dto.setType("singleChoice");
-            return dto;
-
-        } else if (q instanceof MultipleChoiceQuestion mq) {
-            MultipleChoiceQuestionResponseDTO dto = new MultipleChoiceQuestionResponseDTO();
-            fillCommonFields(dto, mq);
-            dto.setCorrectIndices(mq.getCorrectIndices());
-            dto.setType("multipleChoice");
-            return dto;
-        }
-        throw new IllegalStateException("Unknown question type: " + q.getClass());
-    }
-
-    private void fillCommonFields(QuestionResponseDTO dto, Question q) {
-        dto.setUuid(q.getUuid());
-        dto.setQuestion(q.getQuestion());
-        dto.setOptions(q.getOptions());
-        dto.setSuccessRate(q.getSuccessRate());
     }
 }
